--- a/nabidky/backend.html
+++ b/nabidky/backend.html
@@ -28,17 +28,17 @@
             </ul>
         </nav>
         <main>
-            <a href="../index.html" class="btn btn-secondary mb-3">← Zpět na výpis nabídek</a>
+            <a href="../index.html" class="btn btn-secondary mb-3">← Späť na výpis ponúk</a>
             <section class="content-section">
                 <h1 class="section-title">BACK-END Dev.</h1>
                 <p><b>Lokalita:</b> Bratislava</p>
-                <p>Do našeho týmu hledáme zkušeného Back-end developera. Pracujeme s moderními technologiemi a nabízíme možnost podílet se na zajímavých projektech.</p>
+                <p>Do nášho tímu hľadáme skúseného Back-end developera. Pracujeme s modernými technológiami a ponúkame možnosť podieľať sa na zaujímavých projektoch.</p>
                 <ul>
-                    <li>Vývoj a údržba serverových aplikací</li>
-                    <li>Spolupráce s front-end týmem</li>
-                    <li>Možnost práce na dálku</li>
+                    <li>Vývoj a údržba serverových aplikácií</li>
+                    <li>Spolupráca s front-end tímom</li>
+                    <li>Možnosť práce na diaľku</li>
                 </ul>
-                <a href="mailto:info@profesia.sk" class="btn btn-primary">Mám zájem</a>
+                <a href="mailto:info@profesia.sk" class="btn btn-primary">Mám záujem</a>
             </section>
         </main>
         <footer class="footer">
