--- a/nabidky/frontend.html
+++ b/nabidky/frontend.html
@@ -28,17 +28,17 @@
             </ul>
         </nav>
         <main>
-            <a href="../index.html" class="btn btn-secondary mb-3">← Zpět na výpis nabídek</a>
+            <a href="../index.html" class="btn btn-secondary mb-3">← Späť na výpis ponúk</a>
             <section class="content-section">
                 <h1 class="section-title">FRONT - END Developer</h1>
                 <p><b>Lokalita:</b> Bratislava</p>
-                <p>Hledáme zkušeného Front-end developera, který se připojí k našemu týmu. Pracujeme s moderními technologiemi a nabízíme možnost podílet se na zajímavých projektech.</p>
+                <p>Hľadáme skúseného Front-end developera, ktorý sa pripojí k nášmu tímu. Pracujeme s modernými technológiami a ponúkame možnosť podieľať sa na zaujímavých projektoch.</p>
                 <ul>
-                    <li>Vývoj a údržba webových aplikací</li>
-                    <li>Spolupráce s UX/UI designéry</li>
-                    <li>Možnost práce na dálku</li>
+                    <li>Vývoj a údržba webových aplikácií</li>
+                    <li>Spolupráca s UX/UI dizajnérmi</li>
+                    <li>Možnosť práce na diaľku</li>
                 </ul>
-                <a href="mailto:info@profesia.sk" class="btn btn-primary">Mám zájem</a>
+                <a href="mailto:info@profesia.sk" class="btn btn-primary">Mám záujem</a>
             </section>
         </main>
         <footer class="footer">
