--- a/nabidky/marketing.html
+++ b/nabidky/marketing.html
@@ -28,17 +28,17 @@
             </ul>
         </nav>
         <main>
-            <a href="../index.html" class="btn btn-secondary mb-3">← Zpět na výpis nabídek</a>
+            <a href="../index.html" class="btn btn-secondary mb-3">← Späť na výpis ponúk</a>
             <section class="content-section">
                 <h1 class="section-title">Marketing guru</h1>
                 <p><b>Lokalita:</b> Topoľčany, Nitra, Bratislava</p>
-                <p>Hledáme kreativního marketingového specialistu, který bude posouvat naši značku vpřed a přinášet nové nápady.</p>
+                <p>Hľadáme kreatívneho marketingového špecialistu, ktorý bude posúvať našu značku vpred a prinášať nové nápady.</p>
                 <ul>
-                    <li>Plánování a realizace marketingových kampaní</li>
-                    <li>Spolupráce s týmem napříč firmou</li>
-                    <li>Možnost práce na dálku</li>
+                    <li>Plánovanie a realizácia marketingových kampaní</li>
+                    <li>Spolupráca s tímom naprieč firmou</li>
+                    <li>Možnosť práce na diaľku</li>
                 </ul>
-                <a href="mailto:info@profesia.sk" class="btn btn-primary">Mám zájem</a>
+                <a href="mailto:info@profesia.sk" class="btn btn-primary">Mám záujem</a>
             </section>
         </main>
         <footer class="footer">
