--- a/nabidky/recepcna.html
+++ b/nabidky/recepcna.html
@@ -28,17 +28,17 @@
             </ul>
         </nav>
         <main>
-            <a href="../index.html" class="btn btn-secondary mb-3">← Zpět na výpis nabídek</a>
+            <a href="../index.html" class="btn btn-secondary mb-3">← Späť na výpis ponúk</a>
             <section class="content-section">
-                <h1 class="section-title">Pozie recepčnej, výpomoc v administratíve a zastupovanie během materskej</h1>
+                <h1 class="section-title">Pozícia recepčnej, výpomoc v administratíve a zastupovanie počas materskej</h1>
                 <p><b>Lokalita:</b> Bratislava</p>
-                <p>Hledáme spolehlivou recepční na výpomoc v administrativě a zastupování během mateřské dovolené.</p>
+                <p>Hľadáme spoľahlivú recepčnú na výpomoc v administratíve a zastupovanie počas materskej dovolenky.</p>
                 <ul>
-                    <li>Komunikace s návštěvníky a zaměstnanci</li>
-                    <li>Administrativní podpora týmu</li>
-                    <li>Možnost dlouhodobé spolupráce</li>
+                    <li>Komunikácia s návštevníkmi a zamestnancami</li>
+                    <li>Administratívna podpora tímu</li>
+                    <li>Možnosť dlhodobej spolupráce</li>
                 </ul>
-                <a href="mailto:info@profesia.sk" class="btn btn-primary">Mám zájem</a>
+                <a href="mailto:info@profesia.sk" class="btn btn-primary">Mám záujem</a>
             </section>
         </main>
         <footer class="footer">
