--- a/nabidky/support.html
+++ b/nabidky/support.html
@@ -28,17 +28,17 @@
             </ul>
         </nav>
         <main>
-            <a href="../index.html" class="btn btn-secondary mb-3">← Zpět na výpis nabídek</a>
+            <a href="../index.html" class="btn btn-secondary mb-3">← Späť na výpis ponúk</a>
             <section class="content-section">
-                <h1 class="section-title">Support specialist</h1>
+                <h1 class="section-title">Support špecialista</h1>
                 <p><b>Lokalita:</b> Bratislava</p>
-                <p>Hledáme specialistu zákaznické podpory, který bude pomáhat našim klientům a řešit jejich požadavky.</p>
+                <p>Hľadáme špecialistu zákazníckej podpory, ktorý bude pomáhať našim klientom a riešiť ich požiadavky.</p>
                 <ul>
-                    <li>Komunikace se zákazníky</li>
-                    <li>Řešení technických dotazů</li>
-                    <li>Možnost práce na dálku</li>
+                    <li>Komunikácia so zákazníkmi</li>
+                    <li>Riešenie technických otázok</li>
+                    <li>Možnosť práce na diaľku</li>
                 </ul>
-                <a href="mailto:info@profesia.sk" class="btn btn-primary">Mám zájem</a>
+                <a href="mailto:info@profesia.sk" class="btn btn-primary">Mám záujem</a>
             </section>
         </main>
         <footer class="footer">
