--- a/index.html
+++ b/index.html
@@ -99,23 +99,23 @@
                 </div>
             </section>
 
-            <!-- Reference zaměstnanců -->
+            <!-- Referencie zamestnancov -->
             <section id="reference" class="content-section">
-                <h2 class="section-title">REFERENCE ZAMĚSTNANCŮ</h2>
+                <h2 class="section-title">REFERENCIE ZAMESTNANCOV</h2>
                 <div class="references-grid">
                     <div class="reference-item">
-                        <div class="reference-photo"><img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Zaměstnanec 1"></div>
-                        <blockquote>„Ve společnosti Profesia jsem našel nejen práci, ale i skvělý tým a možnost růstu.“</blockquote>
+                        <div class="reference-photo"><img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Zamestnanec 1"></div>
+                        <blockquote>„V spoločnosti Profesia som našiel nielen prácu, ale aj skvelý tím a možnosť rastu.“</blockquote>
                         <div class="reference-name">Martin, Front-end Developer</div>
                     </div>
                     <div class="reference-item">
-                        <div class="reference-photo"><img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Zaměstnanec 2"></div>
-                        <blockquote>„Oceňuji flexibilitu a benefity, které mi umožňují lépe sladit práci a rodinu.“</blockquote>
-                        <div class="reference-name">Petra, HR Specialistka</div>
+                        <div class="reference-photo"><img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Zamestnanec 2"></div>
+                        <blockquote>„Oceňujem flexibilitu a benefity, ktoré mi umožňujú lepšie zladiť prácu a rodinu.“</blockquote>
+                        <div class="reference-name">Petra, HR špecialistka</div>
                     </div>
                     <div class="reference-item">
-                        <div class="reference-photo"><img src="https://randomuser.me/api/portraits/men/65.jpg" alt="Zaměstnanec 3"></div>
-                        <blockquote>„Firemní kultura je tu opravdu přátelská a inspirativní.“</blockquote>
+                        <div class="reference-photo"><img src="https://randomuser.me/api/portraits/men/65.jpg" alt="Zamestnanec 3"></div>
+                        <blockquote>„Firemná kultúra je tu naozaj priateľská a inšpiratívna.“</blockquote>
                         <div class="reference-name">Ján, Marketing</div>
                     </div>
                 </div>
